# app/Http/Controllers/Api/V1/Admin/ProjectsApiController.php
@@ -42,6 +42,9 @@ class ProjectsApiController extends Controller
      *      path="/projects",
      *      operationId="storeProject",
      *      tags={"Projects"},
+     *      security={
+     *          {"passport": {}},
+     *      },
      *      summary="Store new project",
      *      description="Returns project data",
      *      @OA\RequestBody(
@@ -155,6 +158,9 @@ class ProjectsApiController extends Controller
      *      path="/projects/{id}",
      *      operationId="updateProject",
      *      tags={"Projects"},
+     *      security={
+     *          {"passport": {}},
+     *      },
      *      summary="Update existing project",
      *      description="Returns updated project data",
      *      @OA\Parameter(
@@ -207,6 +213,9 @@ class ProjectsApiController extends Controller
      *      path="/projects/{id}",
      *      operationId="deleteProject",
      *      tags={"Projects"},
+     *      security={
+     *          {"passport": {}},
+     *      },
      *      summary="Delete existing project",
      *      description="Deletes a record and returns no content",
      *      @OA\Parameter(
